<resources>
    <string name="app_name">CashManager</string>
    <string name="title_market">Market</string>
    <string name="title_shoppingCart">Shopping Cart</string>
    <string name="title_settings">Settings</string>
    <string name="servertext">Configure server access</string>
    <string name="servername">Server Name</string>
    <string name="serverpassword">Server Password</string>
    <string name="serverconnexion">Connexion</string>
    <string name="_0">0</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="nfc">NFC</string>
    <string name="qrcode">QrCode</string>
    <string name="paiement_nfc">NFC payment</string>
    <string name="paiement_qrcode">QrCode payment</string>
    <string name="CB">Place your card under device</string>
    <string name="send_bill">Send a bill</string>
    <string name="saveSettings">Save settings</string>
    <string name="network">Network:</string>
    <string name="server">Server:</string>
    <string name="status_1">Disconnected</string>
    <string name="status_2">Connected</string>
</resources>
