<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.epitech.cashmanager.activity.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Server Settings"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:gravity="right"
            android:paddingLeft="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        tools:context="com.epitech.cashmanager.activity.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servertext"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:layout_marginBottom="25dp"
            >

            <EditText
                android:id="@+id/text_settings"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/servername" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:layout_marginBottom="50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serverpassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConnexion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/serverconnexion" />

    </LinearLayout>
</LinearLayout>