<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="430dp">


        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="129dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="168dp"
            android:text="@string/paiement_nfc"
            android:onClick="goToNFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="110dp"
            android:onClick="goToQr"
            android:text="@string/paiement_qrcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:padding="8dp"
        app:elevation="4dp"
        android:layout_gravity="bottom"
        android:elevation="15dp"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="66dp">
        <LinearLayout
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlCompat">

            <TextView
                android:id="@+id/totalLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="18dp"
                android:id="@+id/total_price"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>